{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 183,
  "lineage": "8b1835b9-f97c-76f1-3ff6-bd90f7625fc6",
  "resources": [
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ibm-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:internet-gateway/igw-082a204e8a4c707b4",
            "id": "igw-082a204e8a4c707b4",
            "owner_id": "495284731844",
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm-igw"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm-igw"
            },
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "dependencies": [
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "ibm_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b969194a2b9c5d",
            "original_route_table_id": "rtb-085a9916cd53d5a5b",
            "route_table_id": "rtb-0aa2da115b41e07ff",
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "dependencies": [
            "module.vpc_internal_svcs.aws_route_table.ibm_internal_svc_rt",
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_route",
      "name": "my_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-082a204e8a4c707b4",
            "id": "r-rtb-0aa2da115b41e07ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa2da115b41e07ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_internal_svcs.aws_internet_gateway.ibm-igw",
            "module.vpc_internal_svcs.aws_route_table.ibm_internal_svc_rt",
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ibm_internal_svc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:route-table/rtb-0aa2da115b41e07ff",
            "id": "rtb-0aa2da115b41e07ff",
            "owner_id": "495284731844",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_rt"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ibm_internal_svc_zone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:subnet/subnet-0a46700423cd6f57c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.31.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a46700423cd6f57c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495284731844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_a",
              "Tier": "ibm_internal_svc_zone"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_a",
              "Tier": "ibm_internal_svc_zone"
            },
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "dependencies": [
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc",
            "module.vpc_internal_svcs.data.aws_availability_zones.ibm_internal_svc_available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:subnet/subnet-00842e1b90a8e8dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.31.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00842e1b90a8e8dac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495284731844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_b",
              "Tier": "ibm_internal_svc_zone"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_b",
              "Tier": "ibm_internal_svc_zone"
            },
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "dependencies": [
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc",
            "module.vpc_internal_svcs.data.aws_availability_zones.ibm_internal_svc_available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:subnet/subnet-0605e04e91cf90b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.31.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605e04e91cf90b41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495284731844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_c",
              "Tier": "ibm_internal_svc_zone"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc_zone_c",
              "Tier": "ibm_internal_svc_zone"
            },
            "vpc_id": "vpc-00ccda7f2e034417b"
          },
          "dependencies": [
            "module.vpc_internal_svcs.aws_vpc.ibm_internal_svc",
            "module.vpc_internal_svcs.data.aws_availability_zones.ibm_internal_svc_available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_internal_svcs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ibm_internal_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:495284731844:vpc/vpc-00ccda7f2e034417b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.31.0.0/16",
            "default_network_acl_id": "acl-01599e4a7e60c41a6",
            "default_route_table_id": "rtb-085a9916cd53d5a5b",
            "default_security_group_id": "sg-0fc2fa973a2e92849",
            "dhcp_options_id": "dopt-660ad50d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ccda7f2e034417b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085a9916cd53d5a5b",
            "owner_id": "495284731844",
            "tags": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc"
            },
            "tags_all": {
              "Billable_Object": "mumbai",
              "Name": "ibm_internal_svc"
            }
          }
        }
      ]
    }
  ]
}